Update 2015-06-05-spark-streaming-example-project-0.1.0-released.md